--- a/modules/config/default_config.yml
+++ b/modules/config/default_config.yml
@@ -32,12 +32,8 @@ account: # 账号相关
   # 
   # 服务器可使用docker在本地搭建或者使用他人开放的服务
   sign-servers: 
-    - url: '-'  # 主签名服务器地址， 必填
-      key: '114514'  # 签名服务器所需要的apikey, 如果签名服务器的版本在1.1.0及以下则此项无效
-      authorization: '-'   # authorization 内容, 依服务端设置，如 'Bearer xxxx'
+    - url: 'https://sign.lagrangecore.org/api/sign'  # 主签名服务器地址， 必填
     - url: '-'  # 备用
-      key: '114514'  
-      authorization: '-' 
 
   # 判断签名服务不可用（需要切换）的额外规则
   # 0: 不设置 （此时仅在请求无法返回结果时判定为不可用）
