--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,6 @@
 linters-settings:
   errcheck:
-    ignore: fmt:.*,io/ioutil:^Read.*
+    exclude-functions: fmt:.*,io/ioutil:^Read.*
     ignoretests: true
 
   goimports:
@@ -53,15 +53,11 @@ run:
   # concurrency: 4 # explicitly omit this value to fully utilize available resources.
   deadline: 5m
   issues-exit-code: 1
-  skip-dirs:
-    - db
-    - cmd/api-generator
-    - internal/encryption
   tests: true
 
 # output configuration options
 output:
-  format: "colored-line-number"
+  formats: "colored-line-number"
   print-issued-lines: true
   print-linter-name: true
   uniq-by-line: true
@@ -72,3 +68,7 @@ issues:
   exclude-use-default: false
   exclude:
     - "Error return value of .((os.)?std(out|err)..*|.*Close|.*Seek|.*Flush|os.Remove(All)?|.*print(f|ln)?|os.(Un)?Setenv). is not check"
+  exclude-dirs:
+    - db
+    - cmd/api-generator
+    - internal/encryption
