--- a/modules/config/default_config.yml
+++ b/modules/config/default_config.yml
@@ -1,10 +1,6 @@
 # go-cqhttp 默认配置文件
 
 account: # 账号相关
-  uin: 1233456 # QQ账号
-  password: '' # 密码为空时使用扫码登录
-  encrypt: false  # 是否开启密码加密
-  status: 0      # 在线状态 请参考 https://docs.go-cqhttp.org/guide/config.html#在线状态
   relogin: # 重连设置
     delay: 3   # 首次重连延迟, 单位秒
     interval: 3   # 重连间隔
@@ -17,29 +13,19 @@ account: # 账号相关
   allow-temp-session: false
 
   # 数据包的签名服务器列表，第一个作为主签名服务器，后续作为备用
-  # 兼容 https://github.com/fuqiuluo/unidbg-fetch-qsign
+  # 与android签名不兼容
   # 如果遇到 登录 45 错误, 或者发送信息风控的话需要填入一个或多个服务器
   # 不建议设置过多，设置主备各一个即可，超过 5 个只会取前五个
   # 示例:
   # sign-servers: 
   #   - url: 'http://127.0.0.1:8080' # 本地签名服务器
-  #     key: "114514"  # 相应 key
-  #     authorization: "-"   # authorization 内容, 依服务端设置
   #   - url: 'https://signserver.example.com' # 线上签名服务器
-  #     key: "114514"  
-  #     authorization: "-"   
   #   ...
   # 
-  # 服务器可使用docker在本地搭建或者使用他人开放的服务
+  # 服务器不提供自建方法
   sign-servers: 
     - url: 'https://sign.ciallo.site/api/sign'  # 主签名服务器地址， 必填
     - url: '-'  # 备用
-
-  # 判断签名服务不可用（需要切换）的额外规则
-  # 0: 不设置 （此时仅在请求无法返回结果时判定为不可用）
-  # 1: 在获取到的 sign 为空 （若选此建议关闭 auto-register，一般为实例未注册但是请求签名的情况）
-  # 2: 在获取到的 sign 或 token 为空（若选此建议关闭 auto-refresh-token ）
-  rule-change-sign-server: 1
 
   # 连续寻找可用签名服务器最大尝试次数
   # 为 0 时会在连续 3 次没有找到可用签名服务器后保持使用主签名服务器，不再尝试进行切换备用
@@ -47,21 +33,6 @@ account: # 账号相关
   max-check-count: 0
   # 签名服务请求超时时间(s)
   sign-server-timeout: 60
-  # 如果签名服务器的版本在1.1.0及以下, 请将下面的参数改成true
-  # 建议使用 1.1.6 以上版本，低版本普遍半个月冻结一次
-  is-below-110: false
-  # 在实例可能丢失（获取到的签名为空）时是否尝试重新注册
-  # 为 true 时，在签名服务不可用时可能每次发消息都会尝试重新注册并签名。
-  # 为 false 时，将不会自动注册实例，在签名服务器重启或实例被销毁后需要重启 go-cqhttp 以获取实例
-  # 否则后续消息将不会正常签名。关闭此项后可以考虑开启签名服务器端 auto_register 避免需要重启
-  # 由于实现问题，当前建议关闭此项，推荐开启签名服务器的自动注册实例
-  auto-register: false
-  # 是否在 token 过期后立即自动刷新签名 token（在需要签名时才会检测到，主要防止 token 意外丢失）
-  # 独立于定时刷新
-  auto-refresh-token: false
-  # 定时刷新 token 间隔时间，单位为分钟, 建议 30~40 分钟, 不可超过 60 分钟
-  # 目前丢失token也不会有太大影响，可设置为 0 以关闭，推荐开启
-  refresh-interval: 40
 
 heartbeat:
   # 心跳频率, 单位秒
